[package]
name = "ctrl-flow"
license-file = "LICENSE"
homepage = "https://github.com/Calastrophe/ctrl-flow"
repository = "https://github.com/Calastrophe/ctrl-flow"
keywords = ["emulator", "control-flow", "visual", "graph"]
description = "A platform agnostic easy-to-use library for implementing and visualizing control flow graphs."
readme = "README.md"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.39"
